# simiot

./: .gitignore  README.md  analise-repositorio.md  docker-compose.dev.yml  proposta.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: firmware.py  projects.py  run.py
backend/app/core/: config.py
backend/app/services/: builder.py  firmware_paths.py  runner.py  templates.py
backend/tests/: conftest.py  test_firmware_api.py  test_firmware_paths.py  test_project_cleanup.py
containers/esp32-qemu/: Dockerfile  simiot-qemu-runner.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts
frontend/src/components/: ProjectDetail.vue  ProjectList.vue
